--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "net",
+    "chat app",
+    "node"
+  ],
+  "author": "Ashlyn Knox",
+  "license": "MIT"
 }
